crates/vite_task_bin/tests/e2e_snapshots/fixtures/topological-execution-order/snapshots/recursive build runs dependencies before dependents.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run -r build # core -> lib -> app
~/packages/core$ echo 'Building core' ⊘ cache disabled
Building core

~/packages/lib$ echo 'Building lib' ⊘ cache disabled
Building lib

~/packages/app$ echo 'Building app' ⊘ cache disabled
Building app

---
vp run: 0/3 cache hit (0%). (Run `vp run --last-details` for full details)
