crates/vite_task_bin/tests/e2e_snapshots/fixtures/topological-execution-order/snapshots/transitive build from app runs all dependencies.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run -t build # core -> lib -> app
~/packages/core$ echo 'Building core' ⊘ cache disabled: built-in command
Building core

~/packages/lib$ echo 'Building lib' ⊘ cache disabled: built-in command
Building lib

~/packages/app$ echo 'Building app' ⊘ cache disabled: built-in command
Building app

---
[vp run] 0/3 cache hit (0%). (Run `vp run --last-details` for full details)
