crates/vite_task_bin/tests/e2e_snapshots/fixtures/topological-execution-order/snapshots/transitive build from lib runs only its dependencies.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run -t build # core -> lib
~/packages/core$ echo 'Building core' ⊘ cache disabled: built-in command
Building core

~/packages/lib$ echo 'Building lib' ⊘ cache disabled: built-in command
Building lib

────────────────────────────────────────────────
[vp run] 0/2 cache hit (0%). (Run `vp run --verbose` for full details)
